# Save-It.AI

./: .env.example  .gitignore  .replit  README.md  docker-compose.yml  main.py  pyproject.toml  replit.md
.github/workflows/: ci.yml
attached_assets/: Pasted--text-You-are-Replit-Agent-acting-as-a-Senior-Full-Stac_1768939949603.txt  Pasted-0-Platform-Foundation-Multi-tenant-Org-Sites-Users-Role_1765826358611.txt  Pasted-Act-as-a-Senior-Full-Stack-Architect-and-Lead-Developer_1765822247628.txt  Pasted-Act-as-a-Senior-Lead-Architect-for-an-advanced-Energy-M_1765823353854.txt  Pasted-Role-You-are-a-Staff-Software-Engineer-Tech-Lead-Soluti_1765824321438.txt  Pasted-SAVE-IT-AI-Full-Implementation-Plan-Phase-1-Core-Infras_1765828519421.txt  Pasted-Set-up-core-device-data-structures-Define-device-type-c_1768927092355.txt  storage_calculator_consumer_895c803c-a973-4526-a7a1-4345b0fb6_1765833180882.xlsx
backend/: COMPLETE_IMPLEMENTATION_PLAN.md  Dockerfile  ZOHO_IOT_IMPLEMENTATION_PLAN.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_missing_indexes.py  003_production_indexes.py  004_create_all_tables.py  005_add_site_fields.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/routers/: __init__.py  admin.py  ai_agents.py  alarms.py  analysis.py  assets.py  auth.py  bess.py  bills.py  control.py  custom_fields.py  dashboards.py  data_quality.py  device_groups.py  device_templates.py  exports.py  forecasting.py  gateways.py  geofences.py  health.py  ingestion.py  integrations.py  kpis.py  lifecycle.py  maintenance.py  meters.py  modbus_registers.py  notification_channels.py  notifications.py  public.py  pv.py  reports.py  scheduled_reports.py  sites.py  system.py  tariffs.py  telemetry.py  tenants.py  virtual_meters.py  webhooks.py  (+1 more)
backend/app/core/: config.py  database.py  error_tracking.py  logging.py  versioning.py
backend/app/middleware/: __init__.py  api_key_auth.py  audit_log.py  cache.py  csrf.py  error_handler.py  multi_tenant.py  rate_limit.py  request_log.py  security_headers.py  user_context.py  validation.py
backend/app/models/: __init__.py  ai_forecasting.py  asset.py  base.py  bess.py  bill.py  control.py  core.py  data_quality.py  device_templates.py  devices.py  enterprise.py  integrations.py  maintenance.py  meter.py  notification.py  platform.py  pv.py  site.py  tariff.py  telemetry.py  virtual_meters.py
backend/app/routers/: certificates.py  device_models.py  device_products.py  devices_v2.py  infrastructure.py  policies.py
backend/app/schemas/: __init__.py  ai_forecasting.py  asset.py  auth.py  base.py  bess.py  bill.py  control.py  core.py  data_quality.py  devices.py  enterprise.py  gap_analysis.py  integrations.py  maintenance.py  meter.py  notification.py  platform.py  pv.py  reports.py  response.py  site.py  tariff.py  virtual_meters.py
backend/app/seeds/: device_templates_seed.py
backend/app/services/: __init__.py  aggregation_service.py  alarm_engine.py  api_versioning.py  audit_service.py  backup_service.py  certificate_service.py  circuit_breaker.py  command_service.py  config_service.py  config_sync_service.py  custom_field_service.py  dashboard_service.py  data_ingestion.py  device_group_service.py  device_onboarding.py  device_status_monitor.py  discovery_service.py  email_service.py  event_bus.py  event_service.py  export_service.py  firmware_service.py  geofence_service.py  graceful_shutdown.py  health_monitor.py  health_service.py  job_queue.py  kpi_engine.py  lifecycle_service.py  load_testing.py  maintenance_service.py  metrics_service.py  modbus_manager.py  model_propagation.py  mqtt_broker.py  mqtt_credentials.py  mqtt_subscriber.py  notification_service.py  pdf_service.py  (+20 more)
backend/app/services/digital_twin/: __init__.py  gap_analysis.py
backend/app/services/financial/: __init__.py  bill_validation.py
backend/app/services/optimization/: __init__.py  notification_service.py  solar_roi.py
backend/app/utils/: __init__.py  hashing.py  ip.py  password.py
backend/scripts/: migrate_db.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_devices.py  test_gateways.py  test_meters.py  test_multi_tenant.py  test_rate_limit.py  test_security.py  test_sites.py
backend/tests/integration/: __init__.py  test_auth_flow.py  test_command_flow.py  test_device_flow.py  test_gateway_registration_e2e.py  test_modbus_connection.py  test_mqtt_telemetry.py
docs/: ARCHITECTURE.md  COMPLETED_PLAN_phases1-5.md  DEVELOPMENT.md  WORKING_AUDIT_FIX_PLAN.md
docs/api/: authentication.md  devices.md  meters.md  sites.md  webhooks.md
docs/deployment/: docker.md  environment.md  kubernetes.md
docs/runbooks/: backup-restore.md  incident-response.md  scaling.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: browser-tests.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: setup.ts
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secrets.yaml
mosquitto/config/: mosquitto.conf
nginx/: nginx.conf
raspberry-pi-setup/: DEPLOYMENT_PLAN.md  QUICKSTART.md  README.md  install.sh
raspberry-pi-setup/configs/: .env.example  fail2ban-jail.local  nginx-saveit.conf
raspberry-pi-setup/scripts/: 01-system-setup.sh  02-install-dependencies.sh  03-install-database.sh  04-deploy-application.sh  05-setup-nginx.sh  06-setup-services.sh  07-setup-security.sh  08-setup-extras.sh
raspberry-pi-setup/services/: saveit-backend.service  saveit-webhook.service
(+101 files in other folders)
