[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.5.0",
    "alembic>=1.17.2",
    "amqtt>=0.11.3",
    "asyncio-mqtt>=0.16.2",
    "fastapi>=0.124.4",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.3",
    "numpy>=2.3.5",
    "numpy-financial>=1.0.0",
    "openai>=2.12.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymodbus>=3.11.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.6",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
