[project]
name = "save-it-ai"
version = "0.1.0"
description = "AI-driven energy management platform for B2B clients"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "openai>=1.0.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    # IoT & Device Communication
    "aiomqtt>=2.0.0",
    "pymodbus>=3.6.0",
    "redis>=5.0.0",
    # Additional utilities
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    # Authentication & Security
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Background tasks & scheduling
    "apscheduler>=3.10.0",
    # Email
    "emails>=0.6",
    # Validation & utilities
    "email-validator>=2.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "bandit>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]
